# krita-ios

./: .cirrus.yml  .gitignore  CMakeLists.txt  HACKING.ios.md  README.ios.md  README.md
.circleci/: config.yml
.github/workflows/: ios.yml
cmake/modules/: FindLibMyPaint.cmake  ios.toolchain.cmake
krita/: CMakeLists.txt  main.cc  org.kde.krita.appdata.xml
libs/: CMakeLists.txt
libs/flake/: KoToolBase.h
libs/global/: CMakeLists.txt
libs/image/: CMakeLists.txt
libs/koplugin/: KoJsonTrader.cpp  KoJsonTrader.h
libs/pigment/tests/: TestKoColorSpaceRegistry.cpp
libs/resources/: KoResourcePaths.cpp
libs/ui/: CMakeLists.txt  KisApplication.cpp  KisCanvasSurfaceColorSpaceManager.cpp  KisIOSFileProxy.h  KisIOSFileProxy.mm  KisMainWindow.cpp  kis_selection_actions_panel.cpp  kis_selection_actions_panel.h  kis_selection_actions_panel_handle.h  kis_selection_decoration.cc  kis_selection_manager.cc
libs/ui/animation/: KisFFMpegWrapper.cpp  KisFFMpegWrapper.h
libs/ui/canvas/: kis_display_color_converter.cpp  kis_mirror_axis.cpp
libs/ui/dialogs/: kis_dlg_preferences.h
libs/ui/input/: KisIOSTabletBridge.h  KisIOSTabletBridge.mm  KisIOSTabletInput.cpp  KisIOSTabletInput.h  kis_input_manager.cpp  kis_input_manager_p.cpp  kis_input_profile_manager.cpp
libs/ui/input/config/: kis_action_shortcuts_model.cpp
libs/ui/opengl/: KisOpenGLCanvasRenderer.cpp  KisOpenGLModeProber.cpp  KisOpenGLModeProber.h  kis_opengl.cpp  kis_opengl_image_textures.cpp
libs/ui/tests/: CMakeLists.txt
libs/ui/tool/: kis_selection_tool_config_widget_helper.cpp  kis_selection_tool_config_widget_helper.h  kis_tool_select_base.h
libs/ui/tool/strokes/: move_selection_stroke_strategy.cpp  move_selection_stroke_strategy.h
libs/ui/widgets/: kis_cie_tongue_widget.cpp  kis_selection_options.h
libs/widgetutils/: CMakeLists.txt
libs/widgetutils/xmlgui/: kbugreport.cpp  kcheckaccelerators.cpp
packaging/ios/: Info.plist.in  KisStaticPluginsInit.cpp.in  LaunchScreen.storyboard  README.md  build-deps.sh  build-krita-ios.sh  ci.md  dependencies.md  krita-ios-pre.cmake  plugins-audit.md  static-plugins.cmake
packaging/ios/3rdparty-ios/: CMakeLists.txt
packaging/ios/3rdparty-ios/patches/: patch-kconfig.cmake
packaging/ios/3rdparty-ios/proxy-libintl/: CMakeLists.txt  libintl.c  libintl.h
packaging/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
packaging/ios/host-tools/: CMakeLists.txt
packaging/linux/snap/: snapcraft.yaml
plugins/dockers/: CMakeLists.txt
plugins/dockers/widegamutcolorselector/: CMakeLists.txt
plugins/impex/heightmap/: CMakeLists.txt
plugins/impex/libkra/: kis_kra_loader.cpp
plugins/impex/ora/: CMakeLists.txt
plugins/impex/rgbe/: CMakeLists.txt
plugins/impex/webp/: CMakeLists.txt
plugins/paintops/libpaintop/: kis_paintop_plugin_utils.h
plugins/tools/basictools/: CMakeLists.txt
plugins/tools/basictools/tests/: CMakeLists.txt
plugins/tools/defaulttool/defaulttool/: DefaultTool.cpp
plugins/tools/tool_transform2/: kis_perspective_transform_strategy.cpp
po/af/: krita.po
po/ar/: krita.po
po/be/: krita.po
po/bg/: krita.po
po/br/: krita.po
po/bs/: krita.po
po/ca/: krita.po
po/ca@valencia/: krita.po
po/cs/: krita.po
po/cy/: krita.po
po/da/: krita.po
po/de/: krita.po
po/el/: krita.po
po/en_GB/: krita.po
po/eo/: krita.po
po/es/: krita.po
po/et/: krita.po
po/eu/: krita.po
po/fa/: krita.po
po/fi/: krita.po
po/fr/: krita.po
po/fy/: krita.po
po/ga/: krita.po
po/gl/: krita.po
po/he/: krita.po
po/hi/: krita.po
po/hne/: krita.po
po/hr/: krita.po
po/hu/: krita.po
po/ia/: krita.po
po/id/: krita.po
po/is/: krita.po
po/it/: krita.po
po/ja/: krita.po
po/ka/: krita.po
po/kk/: krita.po
po/km/: krita.po
po/ko/: krita.po
po/lt/: krita.po
po/lv/: krita.po
po/mai/: krita.po
po/mk/: krita.po
po/mr/: krita.po
po/ms/: krita.po
po/nb/: krita.po
po/nds/: krita.po
po/ne/: krita.po
po/nl/: krita.po
po/nn/: krita.po
po/oc/: krita.po
po/pa/: krita.po
po/pl/: krita.po
po/pt/: krita.po
po/pt_BR/: krita.po
po/ro/: krita.po
po/ru/: krita.po
po/se/: krita.po
po/sk/: krita.po
po/sl/: krita.po
po/sq/: krita.po
po/sv/: krita.po
po/ta/: krita.po
po/tg/: krita.po
po/th/: krita.po
po/tok/: krita.po
po/tr/: krita.po
po/ug/: krita.po
po/uk/: krita.po
po/uz/: krita.po
po/uz@cyrillic/: krita.po
po/vi/: krita.po
po/wa/: krita.po
po/xh/: krita.po
po/zh_CN/: krita.po
po/zh_TW/: krita.po
qmlmodules/components/: CMakeLists.txt
