add_subdirectory(layerdocker)
if(HAVE_OPENEXR AND NOT ANDROID)
    add_subdirectory(smallcolorselector)
endif()
add_subdirectory(specificcolorselector)
add_subdirectory(digitalmixer)
add_subdirectory(advancedcolorselector)
add_subdirectory(presetdocker)
add_subdirectory(historydocker)
add_subdirectory(channeldocker)
if (NOT IOS)
    # Temporarily excluded on iOS: its KisColorSelector widget class name
    # collides with advancedcolorselector's, and its plugin factory is named
    # PaletteDockPluginFactory (a copy-paste from palettedocker), both of which
    # break the single-binary static link. TODO: rename and re-enable.
    add_subdirectory(artisticcolorselector)
endif()
add_subdirectory(tasksetdocker)
add_subdirectory(compositiondocker)
add_subdirectory(patterndocker)
add_subdirectory(griddocker)
add_subdirectory(arrangedocker)
if(HAVE_OCIO AND NOT ANDROID AND NOT HAIKU)
    add_subdirectory(lut)
endif()
add_subdirectory(overview)
add_subdirectory(palettedocker)
add_subdirectory(animation)
add_subdirectory(presethistory)
add_subdirectory(svgcollectiondocker)
add_subdirectory(histogram)
add_subdirectory(gamutmask)
add_subdirectory(recorder)
add_subdirectory(touchdocker)
add_subdirectory(logdocker)
add_subdirectory(snapshotdocker)
add_subdirectory(storyboarddocker)
add_subdirectory(widegamutcolorselector)
add_subdirectory(brushhud)
add_subdirectory(textproperties)
